--- a/Jungnami/Jungnami/JH/Storyboard/Sub.storyboard
+++ b/Jungnami/Jungnami/JH/Storyboard/Sub.storyboard
@@ -2254,7 +2254,7 @@
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Ki-23-CB7" userLabel="whiteBG">
                                                             <rect key="frame" x="0.0" y="0.0" width="375" height="175"/>
                                                             <subviews>
-                                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="v9D-a0-gF5">
+                                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="area_color_map" translatesAutoresizingMaskIntoConstraints="NO" id="v9D-a0-gF5">
                                                                     <rect key="frame" x="22" y="19" width="87" height="87"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="width" constant="87" id="1v8-sS-BKc"/>
@@ -2375,20 +2375,19 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="54"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A4z-jM-xz8">
-                                                    <rect key="frame" x="0.0" y="53" width="375" height="0.5"/>
-                                                    <color key="backgroundColor" red="0.60784313725490191" green="0.60784313725490191" blue="0.60784313725490191" alpha="1" colorSpace="custom" customColorSpace="adobeRGB1998"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="0.5" id="Wuy-n0-q6B"/>
-                                                        <constraint firstAttribute="width" constant="375" id="vh8-2r-WjK"/>
-                                                    </constraints>
-                                                </view>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ed9-KX-3Hl" userLabel="두번째 셀 흰 배경">
                                                     <rect key="frame" x="0.0" y="0.0" width="375" height="54"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="375" id="9rF-Cw-FQc"/>
                                                         <constraint firstAttribute="height" constant="54" id="bee-CB-CL9"/>
+                                                    </constraints>
+                                                </view>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A4z-jM-xz8">
+                                                    <rect key="frame" x="12" y="53" width="351" height="0.5"/>
+                                                    <color key="backgroundColor" red="0.60784313725490191" green="0.60784313725490191" blue="0.60784313725490191" alpha="1" colorSpace="custom" customColorSpace="adobeRGB1998"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="0.5" id="Wuy-n0-q6B"/>
                                                     </constraints>
                                                 </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="관련된 컨텐츠" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="94i-R1-GxB">
@@ -2401,15 +2400,15 @@
                                         </view>
                                         <constraints>
                                             <constraint firstItem="94i-R1-GxB" firstAttribute="top" secondItem="dfK-IG-MqT" secondAttribute="top" constant="17" id="4kR-8H-Vcm"/>
-                                            <constraint firstAttribute="bottom" secondItem="A4z-jM-xz8" secondAttribute="bottom" id="8cG-uB-rhM"/>
+                                            <constraint firstAttribute="bottom" secondItem="A4z-jM-xz8" secondAttribute="bottom" constant="1" id="8cG-uB-rhM"/>
                                             <constraint firstAttribute="trailing" secondItem="ed9-KX-3Hl" secondAttribute="trailing" id="G43-WT-7ev"/>
                                             <constraint firstItem="94i-R1-GxB" firstAttribute="leading" secondItem="dfK-IG-MqT" secondAttribute="leading" constant="12" id="Lbc-YU-cwZ"/>
-                                            <constraint firstItem="A4z-jM-xz8" firstAttribute="leading" secondItem="dfK-IG-MqT" secondAttribute="leading" id="Pw8-IT-yMu"/>
+                                            <constraint firstItem="A4z-jM-xz8" firstAttribute="leading" secondItem="dfK-IG-MqT" secondAttribute="leading" constant="12" id="Pw8-IT-yMu"/>
                                             <constraint firstAttribute="bottom" secondItem="ed9-KX-3Hl" secondAttribute="bottom" id="Zni-BZ-c00"/>
                                             <constraint firstItem="ed9-KX-3Hl" firstAttribute="top" secondItem="dfK-IG-MqT" secondAttribute="top" id="aBZ-nR-Hmc"/>
                                             <constraint firstItem="ed9-KX-3Hl" firstAttribute="leading" secondItem="dfK-IG-MqT" secondAttribute="leading" id="hJo-FP-AMe"/>
                                             <constraint firstAttribute="bottom" secondItem="94i-R1-GxB" secondAttribute="bottom" constant="16" id="nc2-2V-0Up"/>
-                                            <constraint firstAttribute="trailing" secondItem="A4z-jM-xz8" secondAttribute="trailing" id="njA-Yk-nS6"/>
+                                            <constraint firstAttribute="trailing" secondItem="A4z-jM-xz8" secondAttribute="trailing" constant="12" id="njA-Yk-nS6"/>
                                             <constraint firstItem="94i-R1-GxB" firstAttribute="centerY" secondItem="dfK-IG-MqT" secondAttribute="centerY" id="xS7-Ww-z8b"/>
                                         </constraints>
                                         <size key="customSize" width="375" height="54"/>
@@ -2431,7 +2430,7 @@
                                                         <constraint firstAttribute="height" constant="117" id="Xtx-cB-2ku"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fyj-jc-saw">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fyj-jc-saw">
                                                     <rect key="frame" x="0.0" y="130" width="170" height="36"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="36" id="yeC-5U-oc8"/>
@@ -3660,6 +3659,7 @@
     </scenes>
     <resources>
         <image name="Content_gradient" width="375" height="667"/>
+        <image name="area_color_map" width="375" height="513"/>
         <image name="community_bell_blue_circle" width="16" height="16"/>
         <image name="community_chat" width="24" height="24"/>
         <image name="community_heart" width="24" height="24"/>
